## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
## 
## See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/pyfoam
##
## Author : Alexey PETROV
##


#--------------------------------------------------------------------------------------
# Process this file with autoconf to produce a configure script
#--------------------------------------------------------------------------------------
AC_INIT([foam2vtk Project], [0.3], [alexey.petrov.nnov@gmail.com], [foam2vtk])

# AC_CONFIG_AUX_DIR defines an alternative directory where to find the auxiliary
# scripts such as config.guess, install-sh, ...
AC_CONFIG_AUX_DIR(admin)
AC_CONFIG_MACRO_DIR([admin])
AM_INIT_AUTOMAKE([tar-pax -Wno-portability])


echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_SALOME_KERNEL
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_SALOME_MED
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_SALOME_GUI
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_SALOME_VISU
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_HDF5
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_VTK
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_BOOST_PROGRAM_OPTIONS
echo 

echo "---------------------------- mandatory products --------------------------------"
CONFFLU_PRINT_SUMMURY( "salome_kernel_ok salome_med_ok salome_gui_ok salome_visu_ok hdf5_ok vtk_ok boost_program_options_ok" )
echo
echo "--------------------------------------------------------------------------------"
CONFFLU_CHECK_MANDATORY( "salome_kernel_ok salome_med_ok salome_gui_ok salome_visu_ok hdf5_ok vtk_ok boost_program_options_ok" )


#--------------------------------------------------------------------------------------
AC_OUTPUT( [ Makefile \
             bashrc ] )


echo "------------------------------------ OK -----------------------------------------"

